# TNT

./: .gitignore  Makefile  Makefile.in  README  README.tnt  TODO  autostrt.tnt.smpl  bcast.c  bcast.h  bcastadd.c  boxender.tnt.smpl  boxglobl.h  boxlist.c  codconv.c  comp.c  config.h  configure  configure.in  connect.c  connect.h  cookie.c  ctext.tnt  display.c  dpglobal.h  f6fbb.box.smpl  file.c  flchk.tnt.smpl  huffman.c  iface.c  ifacedef.h  init.c  init.h  keyboard.c  keys.h  log.c  macro.c  macro.h  main.c  monbox.c  netpass.tnt.smpl  (+22 more)
.others/: .hilfe  .info  .logcall  Makefile  Makefile.in  READMEBIN  hilfe.c  info.c  logcall.c
autom4te.cache/: output.0  requests  traces.0  traces.1
conf/: linux.cfg  netbsd.cfg  solaris.cfg  tnt_setup  tnt_setup.in
doc/: CHANGES  COPYING  FILES  Makefile  Makefile.in  Readme  Readme1  Readme2  Readme3  Readme4  Readme5  Readme6  Readme7  ax25krnl.doc  iface.doc  tnt.doc  tnt.doc.francais  tntdoc.html  tntdoc.texinfo
doc/solaris/: README  ktnt  mtnt  suntnt_sh  tnt.hlp  tnt_12.up  tnt_192_9k6_tf.ini  tnt_96.up  tnt_96_1k2_tf.ini  tnt_96_9k6_tf.ini  tnt_9k6_kiss.ini
examples/: Makefile  Makefile.in  extrem.tnt  fkeys.tnt  names.tnt  news.tnt  notown.tnt  pw.tnt  qtext.tnt  routes.tnt  sounds.tnt  sys.tnt  telltexte.tnt  termcap.tnt  tnt.dwn  tnt.hlp  tnt.hlp.eng  tnt.ini  tntrem.hlp  tntrem.hlp.eng  tntrem.inf
examples/sounds/: play
include/: Makefile  Makefile.in  config.h  config.h.in  tntrun.h  tntrun.h.in
src/: Makefile  Makefile.in  ax25dump.c  ax25k.c  ax25k.h  bcast.c  bcastadd.c  bcastadd.h  boxlist.c  boxlist.h  codconv.c  comp.c  comp.h  config.h  connect.c  connect.h  cookie.c  crc.c  display.c  file.c  huffman.c  iface.c  iface.h  ifacedef.h  init.c  init.h  keyboard.c  keys.h  log.c  macro.c  main.c  monbox.c  monbox.h  pastrix.h  priv.c  priv.h  remote.c  serial.c  shell.c  shell.h  (+7 more)
