dnl Process this file with autoconf to produce a configure script.
AC_REVISION($REVISION: 1.00)
AC_INIT(src/bcast.c)
AC_CONFIG_HEADER(include/config.h include/tntrun.h)

AC_CANONICAL_SYSTEM

AC_ISC_POSIX

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

AC_SUBST_FILE(cfg)

case "$target" in
	*-*-netbsd*)
		CFLAGS="$CFLAGS -DTNT_NETBSD"
		AC_DEFINE(DIR_STRING,"ls -la ")
		AC_DEFINE(DIRL_STRING,"ls -la ")
		AC_DEFINE(DIRRUN_STRING,"ls ")
		AC_DEFINE(FREE_STRING,"df 2>/dev/null > ")
		AC_DEFINE(BCAST)
		AC_DEFINE(USE_IFACE)
		AC_DEFINE(GEN_NEW_USER)
		AC_DEFINE(DEF_AUTO_NEWLINE,0)
		AC_DEFINE(DEF_SUPP_HICNTL,0)
		AC_DEFINE(DEF_TERMCAP,0)
		AC_DEFINE(DEF_COLOR)
		AC_DEFINE(HAVE_CRTSCTS)
		LIBS="$LIBS -ltermcap"
		cfg=conf/netbsd.cfg
	;;

	*-*-linux*)
		CFLAGS="$CFLAGS -DTNT_LINUX"
                AC_DEFINE(DIR_STRING,"ls -xaFT80 ")
                AC_DEFINE(DIRL_STRING,"ls -laFT80 ")
                AC_DEFINE(DIRRUN_STRING,"ls -xT80 ") 
                AC_DEFINE(FREE_STRING,"df 2>/dev/null > ")
		AC_DEFINE(GEN_NEW_USER)
		AC_DEFINE(USE_HIBAUD)
		AC_DEFINE(BCAST)
		AC_DEFINE(USE_IFACE)
		AC_DEFINE(DEF_AUTO_NEWLINE,0)
		AC_DEFINE(DEF_SUPP_HICNTL,0)
		AC_DEFINE(DEF_TERMCAP,0)
		AC_DEFINE(DEF_COLOR)
		AC_DEFINE(HAVE_CRTSCTS)
		AC_CHECK_LIB(ncurses,main,
		[
			AC_DEFINE(HAVE_NCURSES)
			LIBS="$LIBS -lncurses"
		],[
			LIBS="$LIBS -ltermcap"
		])
		cfg=conf/linux.cfg
	;;

	*-*-isc*)
		CFLAGS="$CFLAGS -DTNT_ISC"
                AC_DEFINE(DIR_STRING,"ls -lF ")
                AC_DEFINE(DIRL_STRING,"ls -lF ")
                AC_DEFINE(DIRRUN_STRING,"ls ")
		AC_DEFINE(FD_SETSIZE,256)
                AC_DEFINE(FREE_STRING,"/bin/df2 2>/dev/null > ")
		AC_DEFINE(BCAST)
		AC_DEFINE(USE_IFACE)
		AC_DEFINE(SPECIAL)
		AC_DEFINE(GEN_NEW_USER)
		AC_DEFINE(PWD_NOT_EMPTY)
		AC_DEFINE(DEF_AUTO_NEWLINE,1)
		AC_DEFINE(DEF_SUPP_HICTNL,1)
		AC_DEFINE(DEF_TERMCAP,1)
		AC_DEFINE(DEF_COLOR)
		AC_DEFINE(HAVE_CRTSCTS)
		LIBS="$LIBS -ltermcap -linet -lcposix"
		cfg=conf/isc.cfg
	;;

	*-*-solaris*)
		CFLAGS="$CFLAGS -DTNT_SOLARIS"
                AC_DEFINE(DIR_STRING,"ls -lF ")
                AC_DEFINE(DIRL_STRING,"ls -lF ")
                AC_DEFINE(DIRRUN_STRING,"ls ")
                AC_DEFINE(FREE_STRING,"/bin/df2 2>/dev/null > ")
		AC_DEFINE(BCAST)
		AC_DEFINE(USE_IFACE)
		AC_DEFINE(SPECIAL)
		AC_DEFINE(GEN_NEW_USER)
		AC_DEFINE(PWD_NOT_EMPTY)
		AC_DEFINE(DEF_AUTO_NEWLINE,1)
		AC_DEFINE(DEF_SUPP_HICTNL,0)
                AC_DEFINE(DEF_TERMCAP,1)
                AC_DEFINE(DEF_COLOR,0)      
		LIBS="$LIBS -ltermcap -lnsl -lsocket"
		cfg=conf/solaris.cfg
	;;

esac

dnl Checks for libraries.
dnl Replace `main' with a function in -lncurses:
AC_CHECK_LIB(ncurses, main,
[
		LIBNCURSES="-lncurses "
		AC_SUBST(LIBNCURSES)
		AC_DEFINE(HAVE_LIBNCURSES)
],[])

dnl Checks for libraries.
dnl Replace `main' with a function in -lncurses:
AC_CHECK_LIB(termcap, main,
[
		LIBTERMCAP="-lncurses "
		AC_SUBST(LIBTERMCAP)
		AC_DEFINE(HAVE_LIBTERMCAP)
],[])

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(errno.h fcntl.h sys/ioctl.h sys/signal sys/time.h termcap.h termio.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_FUNC_UTIME_NULL
AC_CHECK_FUNCS(getcwd gettimeofday mkdir mktime select socket strdup strerror strstr strtoul usleep srandom index memmove)

AC_EGREP_HEADER(ut_host, utmp.h, AC_DEFINE(HAVE_UT_HOST, 1))
AC_EGREP_HEADER(ut_exit, utmp.h, AC_DEFINE(HAVE_UT_EXIT, 1))

AC_MSG_CHECKING(whether to enable sound support)
AC_ARG_ENABLE(sound, [ --disable-sound   will disable sound support],
[
	if test "$enableval" = "no"; then
		AC_MSG_RESULT(no)
	else
		AC_DEFINE(TNT_SOUND)
		AC_MSG_RESULT(yes)
	fi
],[
	AC_MSG_RESULT(yes)
	AC_DEFINE(TNT_SOUND)
])

AC_MSG_CHECKING(whether to enable support for DPBOXT)
AC_ARG_ENABLE(dpboxt, [ --enable-dpboxt    compile for use with dpboxt],
[
	if test "$enableval" = "yes"; then
		AC_DEFINE(DPBOXT)
		AC_MSG_RESULT(yes)
	else
		AC_MSG_RESULT(no)
	fi
],[
	AC_MSG_RESULT(no)
])

AC_MSG_CHECKING(whether to enable ax25 kernel support)
AC_ARG_ENABLE(ax25k, [ --enable-ax25k    use the Linux AX25 Kernel],
[
	if test "$enableval" = "yes"; then
		LIBS="$LIBS -lax25"
		AC_DEFINE(USE_AX25K)
		AC_MSG_RESULT(yes)
	else
		AC_MSG_RESULT(no)
	fi
],[
	AC_MSG_RESULT(no)
])

if test ${prefix} = "NONE"; then
	prefix="/usr/local"
fi

AC_DEFINE_UNQUOTED(TNT_RUN_PATH,"${prefix}/tnt/bin")
AC_DEFINE_UNQUOTED(TNT_MAIN_PATH,"${prefix}/tnt")
AC_DEFINE_UNQUOTED(TNT_INSTALL_PATH,"${prefix}/tnt")

AC_OUTPUT(.others/Makefile doc/Makefile examples/Makefile src/Makefile Makefile include/Makefile conf/tnt_setup)
